# libcorrect

./: .devcontainer.json  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  container_ci.sh
.github/workflows/: ci.yaml  ci.yml
include/: correct-sse.h  correct.h  fec_shim.h
include/correct/: convolutional.h  portable.h  reed-solomon.h
include/correct/convolutional/: bit.h  convolutional.h  error_buffer.h  history_buffer.h  lookup.h  metric.h
include/correct/convolutional/sse/: convolutional.h  lookup.h
include/correct/reed-solomon/: decode.h  encode.h  field.h  polynomial.h  reed-solomon.h
include/correct/util/: error-sim-fec.h  error-sim-shim.h  error-sim-sse.h  error-sim.h
src/: fec_shim.c
src/convolutional/: CMakeLists.txt  bit.c  convolutional.c  cv_decode.c  cv_encode.c  error_buffer.c  history_buffer.c  lookup.c  metric.c
src/convolutional/sse/: CMakeLists.txt  convolutional.c  cv_decode.c  lookup.c
src/reed-solomon/: CMakeLists.txt  polynomial.c  reed-solomon.c  rs_decode.c  rs_encode.c
tests/: CMakeLists.txt  convolutional-fec.c  convolutional-shim.c  convolutional-sse.c  convolutional.c  reed-solomon-fec-interop.c  reed-solomon-shim-interop.c  reed-solomon.c  rs_tester.c  rs_tester_fec.c  rs_tester_fec_shim.c
tools/: find_conv_libfec_poly.c  find_conv_optim_poly.c  find_conv_optim_poly_annealing.c  find_rs_primitive_poly.c
util/: error-sim-shim.c  error-sim.c
